added an unordered list with 6 li elements for the font-awesome icons

--- a/index.html
+++ b/index.html
@@ -33,7 +33,14 @@
 
     <!--  Content  -->
     <div class="container">
- 
+        <ul>
+            <li><a href="#"><span></span></a></li>
+            <li><a href="#"><span></span></a></li>
+            <li><a href="#"><span></span></a></li>
+            <li><a href="#"><span></span></a></li>
+            <li><a href="#"><span></span></a></li>
+            <li></li>
+        </ul>
 
 
     </div>
